# open-term

./: RDP_STATUS.md  SFTP_IMPLEMENTATION.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: copilot-instructions.md
src/: App.css  App.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ftp/: browser.rs  client.rs  mod.rs  transfer.rs
src-tauri/src/local/: browser.rs  mod.rs
src-tauri/src/rdp/: client.rs  framebuffer.rs  input.rs  manager.rs  mod.rs
src-tauri/src/sftp/: browser.rs  mod.rs  transfer.rs
src-tauri/src/ssh/: auth.rs  client.rs  mod.rs
src-tauri/src/storage/: connections.rs  keychain.rs  mod.rs
src-tauri/src/terminal/: manager.rs  mod.rs  pty.rs  session.rs
src-tauri/src/vnc/: client.rs  framebuffer.rs  manager.rs  mod.rs
src/components/connection/: ConnectionForm.css  ConnectionForm.tsx  ConnectionManager.css  ConnectionManager.tsx
src/components/editor/: TextEditor.tsx
src/components/ftp/: FtpBrowser.css  FtpBrowser.tsx  FtpConnectionForm.css  FtpConnectionForm.tsx  index.ts
src/components/layout/: MainLayout.css  MainLayout.tsx  Sidebar.css  Sidebar.tsx
src/components/rdp/: RdpViewer.tsx  index.ts
src/components/sftp/: FileTree.css  FileTree.tsx  SftpBrowser.css  SftpBrowser.tsx  TransferQueue.css  TransferQueue.tsx
src/hooks/: useTerminalChannel.ts
src/stores/: connectionStore.ts  ftpStore.ts  localStore.ts  rdpStore.ts  sftpStore.ts  terminalStore.ts  vncStore.ts
src/types/: index.ts
(+14 files in other folders)
