[package]
name = "open-term"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_term_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dirs = "5"
ssh2 = "0.9"
keyring = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
suppaftp = { version = "6", features = ["native-tls"] }
vnc = "0.4"
image = "0.25"
bytes = "1"
native-tls = "0.2"
tracing = "0.1"
anyhow = "1"
x509-cert = "0.2"

# IronRDP for RDP protocol
ironrdp = "0.14"
ironrdp-blocking = "0.8"
ironrdp-tls = { version = "0.2", features = ["native-tls"] }
ironrdp-pdu = "0.7"
ironrdp-graphics = "0.7"
ironrdp-session = "0.8"
ironrdp-connector = "0.8"

base64 = "0.22"
